<resources>
    <string name="app_name">Success Shots</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">My Space</string>
    <string name="tab_text_3">Account</string>
    <string name="fb_button_like">Like</string>
    <string name="fb_button_comment">Comment</string>
    <string name="fb_button_share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="selected_image">Selected Image</string>
    <string name="enter_title_of_the_video">Enter Title of the video</string>
    <string name="upload_button">Upload Button</string>
    <string name="edit_button">Edit Button</string>
</resources>