<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="#000000"
    android:gravity="center"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    app:cardCornerRadius="0dp"
    app:cardElevation="1dp"
    app:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/black"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fb_item_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/fb_user_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:padding="4dp"
                android:scaleType="fitCenter"
                tools:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/fb_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    tools:text="Eneim" />

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#FFFFFF"
                    tools:text="the simple, the best" />
            </LinearLayout>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.waindesk.successshots.autoplay.VideoImage
                android:layout_width="match_parent"
                android:layout_height="420dp"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/img_playback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_pause"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/img_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_margin="8dp"
                android:src="@drawable/ic_unmute"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/fb_item_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fb_button_like"
                style="@style/Facebook.Button.Feed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fb_button_like"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/fb_button_comment"
                style="@style/Facebook.Button.Feed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fb_button_comment"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/fb_button_share"
                style="@style/Facebook.Button.Feed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fb_button_share"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/over_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cc000000"
        android:visibility="gone" />
</androidx.cardview.widget.CardView>